added freshmeat link

--- a/README
+++ b/README
@@ -15,3 +15,7 @@ Bug reports:
 Developer contact:
 
 estrabd at gmail dot commie
+
+It's also on Freshmeat:
+
+	http://freshmeat.net/projects/vee-the-blog-tool
