--- a/man/veels.1
+++ b/man/veels.1
@@ -5,28 +5,42 @@
 .SH NAME
 veels \- veels is utility for easily listing $VEEDIR/*.raw files in various ways.
 .SH SYNOPSIS
-.B veels [-d] ... | veecat -t # list all titles of posts in the $VEEDIR/.vee directory.
+.B veels [-drx [[-l][-L "ls opts"]]]
 .SH DESCRIPTION
 .B veels
-is a utility for creating post management scripts. It lists to STDOUT
-all $VEEDIR/.vee/*.raw files in various ways. 
+is a general purpose "ls" utility for vee .raw files, should be used as
+the basis for tools that require listing of vee files; missing functionality
+will be added to suite this role. 
 .SH OPTIONS
+.IP -a
+show filename, data, and title of post
 .IP -d
 Points to $VEEDIR, looking for $VEEDIR/.vee/*.raw files.
+.IP -l
+use 
+.B ls (1)
+with default options
+.IP "-L ls_options"
+use ls (1) with custom options.
+.IP -r 
+list posts in oldest to newest order
+.IP -x
+strip file extenstion from file listing - useful for getting basename, which
+is shared as a basename with the formatted
+.I .html
+file 
+.B vee (1)
+creates
+.IP -h
+invoke man page for 
+.B veels (1)
 .SH FILES
-.I .veerc 
-.RS
-The primary configuration file. See
-.BR vee (5)
-for further details.
-.RE
+none
 .SH ENVIRONMENT
-.IP ./.veerc 
-If non-null the full pathname for an alternate system wide
-.IR ~/.veerc .
-Overridden by the
-.B -c
-option.
+.B veels (1)
+is not affected by any external files and is meant to produce
+only output consumable by scripts such as
+.B veecat (1)
 .SH DIAGNOSTICS
 .SH BUGS
 Please report at 
@@ -35,5 +49,51 @@ Please report at
 B. Estrade <estrabd@gmail.com>
 .SH "SEE ALSO"
 .BR vee (1)
+.BR vee (5)
 .BR veecat (1)
 .BR vee-rebuild (1)
+.SH EXAMPLES
+Output list of files that are contained in
+.I path/to/veedir/.vee
+
+	veels -d path/to/veedir
+
+Output list of files, oldest to newest
+
+	veels -d path/to/veedir -r
+
+Output list of files, strip .raw extensions
+
+	veels -d path/to/veedir -x
+
+Pipe output of 
+.B veels (1)
+into
+.B veecat (1)
+for listing all titles
+	
+	veels -d path/to/veedir | veecat -t
+
+Use veels as the basis for a loop in 
+.B sh (1)
+
+	for file in `veels`; do
+
+		TITLE=`echo $f | veecat -t`
+
+    		DATE=`echo $f | veecat -d`
+
+		echo $TITLE $DATE
+
+	done
+.SH HISTORY
+
+.B veels (1)
+was introduced as a fundamental 
+.B vee (1)
+utility for the official 1.0 release and it is meant to serve
+as a building block for interesting and creative scripts that might
+be build to support 
+.B vee (1)
+blogs and installations.
+
