--- a/pod/vee-hooks.5.pod
+++ b/pod/vee-hooks.5.pod
@@ -1,41 +1,64 @@
 =head1 NAME
 
-vee hooks
+I<vee-pre>
+
+B<There is currently no post-format hook enabled>.
+
+=head1 REQUIREMENTS
+
+A vee hook is an executable file that accepts STDIN, a single argument
+($FORMAT_FUNC), and must output to STDOUT.
 
 =head1 SYNOPSIS
 
-vee hooks
+The following is an example hook.
 
-=head1 DESCRIPTION
+    #!/bin/sh
 
-C<veels> is a 
+    # this filter is a null filter; meaning it spits out
+    # exactly what was passed in
 
-=head1 COMMANDS
+    FORMAT_FUNC=$1 # the name of the format function used is passed in
 
-=over 4
+    IFS=""                     # ensures that leading spaces are retained
+    while read -r IN <&0 ; do  # break after 1 sec of no stdin
+     echo "${IN}"              # echo's stdin back out so user can see 
+    done
 
-=item -x     
+It be be written in anything as long as it meets the aforementioned
+L<REQUIREMENTS>:
 
-=back
+    #!/bin/env perl
 
-=head1 FILES
+    use strict;
+    use warnings;
 
-none
+    # toy filter that replaces AUBURN with an img tag
+
+    my $FORMAT_FUNC = $ARGV[0]; # name of format function is passed in
+
+    while(<STDIN>) {
+      chomp;
+      if ($_ =~ s/AUBURN/<img src=http:\/\/www.emaspro.com\/Portals\/0\/images\/Logo\%20-\%20Auburn.jpg>/g ) {
+      # argv[0] is the name of the formatting function
+        if ($FORMAT_FUNC =~ m/groff/) {
+          printf("'nf\n%s\n'fi\n",$_); 
+        } else {
+          printf("%s\n",$_); 
+        } 
+      } else {
+        printf("%s\n",$_); 
+      }
+    }
 
 =head1 ENVIRONMENT
 
-=head1 DIAGNOSTICS
+Must accept a single argument, which is passed to it by I<vee>. And that is
+$FORMAT_FUNC.
 
-=head1 BUGS
+The default value of the pre-format hook is I<vee-pre>, but to change this one
+must define PREFORMAT_HOOK in I<.veerc>.
 
 =head1 AUTHOR
 
 B. Estrade L<estrabd@gmail.com>
-
-=head1 SEE ALSO
-
-I<veels>(1) 
-I<veecat>(1) 
-I<vee-rebuild>(1) 
-I<veerc>(5) 
-I<veeindex>(5) 
