--- a/pod/veecat.1.pod
+++ b/pod/veecat.1.pod
@@ -1,41 +1,67 @@
 =head1 NAME
 
-veecat
+    veecat
 
 =head1 SYNOPSIS
 
-veecat
+    echo file.raw | veecat
 
-=head1 DESCRIPTION
+B<Note: in order to make it easier to write scripts, the I<*.raw> file name is
+passed in via STDIN.>
 
-C<veecat> is a 
-
-=head1 COMMANDS
+=head1 OPTIONS
 
 =over 4
 
-=item -x     
+=item -a
+
+Show the entire contents of the I<*.raw> file
+
+=item -b
+
+Show just the body contents
+
+=item -d
+
+Show just the value of the date field
+
+=item -t
+
+Show just the titla
+
+=item -h
+
+Show usage
 
 =back
 
-=head1 FILES
+=head1 DESCRIPTION 
 
-none
+C<veecat> is a part of the I<vee> family of utilities that is useful for
+extracting information from I<*.raw> files.
 
-=head1 ENVIRONMENT
+It is provided as a basic utility required to build tools to manage I<vee>
+posts.
 
-=head1 DIAGNOSTICS
+=head1 EXAMPLES 
 
-=head1 BUGS
+The best example of all is to take a look at the I<vee-rebuild> tool.
+
+Used in conjunction with I<veels>:
+
+    for f in `veels`; 
+    do
+        TITLE=`echo $f | veecat -t`
+        echo $TITLE
+    done
+
+=head1 BUGS AND LIMITATIONS
+
+Currently, I<veecat> can't be used at the commandline as one would expect,
+e.g.:
+
+    veels | veecat -t
 
 =head1 AUTHOR
 
 B. Estrade L<estrabd@gmail.com>
-
-=head1 SEE ALSO
-
-I<veels>(1) 
-I<veecat>(1) 
-I<vee-rebuild>(1) 
-I<veerc>(5) 
-I<veeindex>(5) 
