--- a/pod/veerc.5.pod
+++ b/pod/veerc.5.pod
@@ -1,41 +1,50 @@
 =head1 NAME
 
-veerc
+I<.veerc>
 
-=head1 SYNOPSIS
+=head1 SYNOPSIS 
 
-veerc
+    # Sample .veerc, used to override default variables...
+
+    INDEX=index.html
+    FOOTERTXT="hijacked by .veerc"
+
+    EDITOR=vi
+    MARGIN=64
+    FORMAT=html
+    INDEX=vee.html
+    DIR=.vee
+    DRAFT=${DIR}/.vee.tmp.$$
+    DATE=`date`
+    YEAR=`date "+%Y"`
+    TIME=`date "+%Y-%m-%dT%H:%M:%S"`
+    SEC=`date "+%s"`
+    DEFAULT_TITLE="Entry ${SEC}";
+    HEADERTXT=   text or `cat some.header.txt` 
+    TOP_TPL=./vee-top.tpl
+    BOT_TPL=./vee-bottom.tpl
+    PREFORMAT_HOOK=./my-pre-hook.sh    the filter is assumed to be executable, else it is ignored
+    PUBLISHED=`date "+%m/%d/%Y"`       date formated for index page entry
+    FORMAT_FUNC=format_with_groff
+    FORMAT_DISPATCHER=default_set_format_func
+    FORMAT_CUSTOM_DISPATCHER=custom_set_format_func
+    FORMAT_CUSTOM_DEFS=./vee-custom.sh               see example in vee/sample-custom-format/ 
 
 =head1 DESCRIPTION
 
-C<veerc> is a 
+A local configuration file that is used if located in `pwd`. If I<-d> is used
+with I<vee>, then this is where the file will be expected if it exists at all.
 
-=head1 COMMANDS
-
-=over 4
-
-=item -x     
-
-=back
-
-=head1 FILES
-
-none
+Corresponding commandline options override what is set herein, if there is a
+flag for it.
 
 =head1 ENVIRONMENT
 
-=head1 DIAGNOSTICS
+This file can basically redefine many parts of the original I<vee> script.
 
-=head1 BUGS
+I<vee> looks for this file in `pwd` and works as expected with the I<-d>
+option.
 
 =head1 AUTHOR
 
 B. Estrade L<estrabd@gmail.com>
-
-=head1 SEE ALSO
-
-I<veels>(1) 
-I<veecat>(1) 
-I<vee-rebuild>(1) 
-I<veerc>(5) 
-I<veeindex>(5) 
