--- a/t/README
+++ b/t/README
@@ -2,13 +2,14 @@ The tests in this directory output TAP, so the best way
 to get some valid output is to use Perl's 'prove' program,
 for example:
 
-	$ prove .
-	./000-dummy.t .. ok    
+	# prove .
+	./000-basic.t .. ok
+	./001-sort.t ... ok
 	All tests successful.
-	Files=1, Tests=15,  1 wallclock secs ( 0.05 usr  0.02 sys +  0.48 cusr  1.16 csys =  1.72 CPU)
+	Files=2, Tests=19,  1 wallclock secs ( 0.03 usr  0.01 sys +  0.26 cusr  0.21 csys =  0.51 CPU)
 	Result: PASS
 
-The 'prove' program comes with Perl, so it's not really in line with the goal
-of vee to work on any base *nix system, but I don't want to 
-get into the business of building my own TAP harness or carrying 
-along 3rd party code.
+The 'prove' program comes with Perl, so it's not really in line 
+with the goal of vee to work on any base *nix system, but I don't want to 
+get into the business of building my own TAP harness or carrying along 
+3rd party code.
