--- a/README
+++ b/README
@@ -51,7 +51,11 @@ estrabd at gmail dot com
 
 It's also on Freshmeat:
 
- http://freshmeat.net/projects/vee-the-blog-tool
+ RIP Freshmeat :(
+
+ Defunct URL:
+
+   http://freshmeat.net/projects/vee-the-blog-tool
 
 Usage: See below.                                                     
 
