--- a/README
+++ b/README
@@ -17,14 +17,17 @@ Portability Goals:
 0. no external dependencies other than Bourne Shell and traditional 
    Unix userland tools (no need to install non-optional utils)
 1. any *nix platform that supports Bourne Shell (sh)
-2. any shell that claims to be Bourne compliant
+2. it "just works" out of the box
+3. new versions won't require "upgrading"
 
 Incompatibilities:
 
 The goal of vee is that it should work on minimal systems using only
 original Bourne shell (sh) and without having to install anything. I
-originally began this work on FreeBSD, but it seems that sort behaves
-differently among FreeBSD, Linux, and Mac - which is frustrating =D
+originally began this work on FreeBSD, but it seems that a couple of
+utilities seem to not be the most portable in their usage. In particular,
+`date` and `sort` have caused some headaches, but alas they have been
+tamed.
 
 Project Status:
 
@@ -51,11 +54,7 @@ estrabd at gmail dot com
 
 It's also on Freshmeat:
 
- RIP Freshmeat :(
-
- Defunct URL:
-
-   http://freshmeat.net/projects/vee-the-blog-tool
+ R.I.P. Freshmeat :(
 
 Usage: See below.                                                     
 
